Added line to fix Windows line endings

--- a/humble/Dockerfile
+++ b/humble/Dockerfile
@@ -118,6 +118,7 @@ RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then \
     fi
 
 COPY ./entrypoint.sh /
+RUN sed -i -e 's/\r$//' /entrypoint.sh
 ENTRYPOINT [ "/bin/bash", "-c", "/entrypoint.sh" ]
 
 ENV USER ubuntu
